fix header text contrast in light mode

--- a/src/scripts/popoverNotifications.css
+++ b/src/scripts/popoverNotifications.css
@@ -7,13 +7,13 @@
   width: 24rem;
   border-radius: .5rem;
   overflow: hidden;
-  color: rgb(var(--color-text));
+  color: rgb(var(--color-notBlack));
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .ch-utils-popover > header {
   padding: .5rem;
   background-color: rgb(var(--color-notWhite) / var(--tw-bg-opacity));
-  color: inherit;
+  color: rgb(var(--color-notBlack));
 }
 .ch-utils-popover:has([data-theme="dark"]) { background-color: rgb(0 0 0 / var(--tw-bg-opacity)); }
 .ch-utils-popover:has([data-theme="dark"]) > header { background-color: rgb(var(--color-notBlack) / var(--tw-bg-opacity)); }
@@ -22,7 +22,10 @@
     color: rgb(var(--color-notWhite));
     background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
-  .ch-utils-popover:has([data-theme="both"]) > header { background-color: rgb(var(--color-notBlack) / var(--tw-bg-opacity)); }
+  .ch-utils-popover:has([data-theme="both"]) > header {
+    background-color: rgb(var(--color-notBlack) / var(--tw-bg-opacity));
+    color: rgb(var(--color-notWhite));
+  }
 }
 .ch-utils-popover > section {
   max-height: 32rem;
